--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 node {
    stage('Git Clone') { // for display purposes
       // Get some code from a GitHub repository
-      git 'https://github.com/AjayNaiduJami/Java_Maven-App.git'
+      git 'https://github.com/Mohanmhn/Java.git'
     
    }
 }
